# bleepscript

./: .project  Cargo.toml  License.txt  README.md  include.tst  main.tst
doc/: bytecode.md  overview.md
scripts/: bench.tst  bytecode_test.tst  draw_mandelbrot.tst  include.tst  main.tst  test.tst
src/: env.rs  errors.rs  lib.rs  loader.rs  main.rs  native.rs  src_loc.rs  sym_tab.rs  value.rs
src/ast/: analysis.rs  debug.rs  expressions.rs  mod.rs  statements.rs
src/bytecode/: closure.rs  gen.rs  instr.rs  mod.rs  opcodes.rs  run.rs
src/exec/: closure.rs  debug.rs  expressions.rs  mod.rs  statements.rs
src/parser/: char_reader.rs  errors.rs  mod.rs  ops.rs  token.rs  tokenizer.rs
src/readers/: errors.rs  file.rs  mod.rs  string.rs
