[package]
name = "bleepscript"
version = "0.0.1"
authors = [ "Ricardo Massaro <ricardo.massaro@gmail.com>" ]
license = "MIT License"

[lib]
name = "bleepscript"
path = "src/lib.rs"

[[bin]]
name = "bleep"
path = "src/bin/main.rs"
doc = false

[[example]]
name = "example"
path = "src/bin/example.rs"
doc = false
